<resources>
    <string name="app_name">ICS Connect</string>

    <string name="booki">BookI</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Read it together</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password.?</string>
    <string name="action_sign_in_short">sign</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Login Id</string>
    <string name="connect_us">Connect Your Query</string>
    <string name="count_fragment">Counting_FRAG</string>
    <string name="login">Login</string>
    <string name="error_file_executong">Error : while capturing your File</string>
    <string name="downloadSpeedBytes">%1$d B</string>
    <string name="downloadSpeedKb">%1$s KB</string>
    <string name="downloadSpeedMb">%1$s MB</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dots">…</string>
    <string name="close">Close</string>
    <string name="clos_querye">Closed Query</string>
    <string name="search_op_name">Search Name</string>

    //encoded strings for documents
    <string name="fa_audio">&#xf1c7;</string>
    <string name="fa_video">&#xf1c8;</string>
    <string name="fa_image">&#xf1c5;</string>
    <string name="fa_word">&#xf1c2;</string>
    <string name="fa_pdf">&#xf1c1;</string>
    <string name="fa_excel">&#xf1c3;</string>
    <string name="fa_ppt">&#xf1c4;</string>
    <string name="fa_text">&#xf0f6;</string>
    <string name="fa_zip">&#xf1c6;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="attached">Attached</string>
    <string name="waiting_for_network">Waiting for Network</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="doccuments">Doccuments</string>
    <string name="close_query">Close Query</string>
    <string name="delete_group">Delete group</string>
    <string name="group">My Groups</string>
    <string name="logout">Logout</string>
    <string name="create_groups">Create Groups</string>
    <string name="all_groups">View All Groups</string>
    <string name="master_admin_frag">Master_Admin_Fragment</string>
    <string name="group_name">Group Name</string>
    <string name="add_admin">Add Admin</string>
    <string name="Company">Company</string>
    <string name="add_members">Add Members</string>

    //time sheet
    <string name="outside_municiple_limit">OUTSIDE MUNICIPLE LIMIT</string>
    <string name="with_in_municiple_limit">WITH IN MUNICIPLE LIMIT</string>
    <string name="tap_to_select_date">TAP TO SELECT DATE</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="date">DATE</string>
    <string name="leave_home_frg">Leave Home Fragment</string>
    <string name="avail_leave">Available Leave</string>
    <string name="frag_leave_status">Leave Status</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="view_time_sheet">View TimeSheet</string>
    <string name="view_marketing_details">View Marketing Details</string>
    <string name="view_expense_details">View Expense Details</string>
    <string name="view_expenses_details">View Expenses Details</string>
    <string name="view_Inspection_details">View Inspection Details</string>
    <string name="view_Manday_details">View Man Day Details</string>
    <string name="weekly">Weekly</string>
    <string name="out_station">OutStation</string>
    <string name="na">NA</string>
    <string name="expense_home_frg">Expenses Fragment</string>
    <string name="summary">Enter your Summary Here</string>
    <string name="not_attached">Choose File</string>
    //timesheet hours
    <string-array name="Hours">
        <item>SELECT</item>
        <item>8</item>
        <item>6</item>
        <item>4</item>
        <item>AB</item>
    </string-array>
    //months
    <string-array name="Months">
        <item>SELECT MONTH</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="Activity">
        <item>SELECT</item>


    </string-array>
</resources>
