<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rootView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"
                tools:context=".MainActivity">

    <ImageView
            android:id="@+id/bookIconImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_action_add"/>

    <TextView
            android:id="@+id/bookITextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookIconImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textColor="@color/colorSplashText"
            android:textSize="16sp"/>

    <ProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-4dp"
            android:foregroundGravity="bottom"
            android:indeterminate="true"
            android:padding="0dp"
            android:theme="@style/ProgressBarStyle"/>

    <RelativeLayout
            android:id="@+id/afterAnimationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:orientation="vertical"
            android:visibility="gone">

        <TextView
                android:id="@+id/WelcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/colorBackground"
                android:textSize="25sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/readItTogetherTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/WelcomeTextView"
                android:layout_marginTop="10dp"
                android:text="@string/read_it_together"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"/>

        <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_below="@+id/readItTogetherTextView"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="40dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/loginButton"
                    android:layout_below="@+id/readItTogetherTextView"
                    android:gravity="center"
                    android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/l_user"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/colorGreen"
                        app:errorEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/colorGreen"
                            android:textColorHint="@color/colorGreen"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/l_pass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/colorGreen"
                        app:counterEnabled="true"
                        app:counterMaxLength="8"
                        app:errorEnabled="false"
                        app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="77"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/colorGreen"
                            android:textColorHint="@color/colorGreen"/>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/cardView"
                android:background="@drawable/button_drawable"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"/>

    </RelativeLayout>
</RelativeLayout>