<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
         android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/ll_create_groups"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/btn_create_groups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/create_groups"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:textColor="#000"
                app:icon="@drawable/ic_create_groups"/>

        <Button
                android:id="@+id/btn_view_groups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/all_groups"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:textColor="#000"
                app:icon="@drawable/ic_group_all"/>
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="8dp"
            android:id="@+id/ll_create_groups_body"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="4dp"
            app:strokeColor="@color/colorTextBlack"
            app:strokeWidth="4dp"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:hint="@string/group_name"
                    android:id="@+id/til_group_name"
                    android:gravity="center"
                    android:textColorHint="@color/colorPrimary"
                    app:counterEnabled="true"
                    android:layout_margin="16dp"
                    app:counterMaxLength="15"
                    app:counterTextColor="@color/colorPrimary"
                    app:counterTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:errorEnabled="false">

            </TextView>
            <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_group_name"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTextBlack"
                    android:textColor="@color/colorTextBlack"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <!--<org.icspl.icsconnect.utils.SearchableSpinner-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:background="@color/colorPrimary"-->
                        <!--android:id="@+id/sp_company">-->
                <!--</org.icspl.icsconnect.utils.SearchableSpinner>-->
                <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:text="@string/Company"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:textColor="#000"
                            app:icon="@drawable/ic_person"/>

                    <org.icspl.icsconnect.utils.SearchableSpinner
                            android:id="@+id/sp_company"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"/>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:text="Region"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:textColor="#000"
                            app:icon="@drawable/ic_person"/>

                    <org.icspl.icsconnect.utils.SearchableSpinner
                            android:id="@+id/sp_Region"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"/>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:text="Station"
                            android:textSize="18sp"
                            android:textColor="#000"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            app:icon="@drawable/ic_person"/>

                    <org.icspl.icsconnect.utils.SearchableSpinner
                            android:id="@+id/sp_Station"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"/>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:text="Status"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:textColor="#000"
                            app:icon="@drawable/ic_person"/>

                    <org.icspl.icsconnect.utils.SearchableSpinner
                            android:id="@+id/sp_Status"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"/>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:text="Department"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:textColor="#000"
                            app:icon="@drawable/ic_person"/>

                    <org.icspl.icsconnect.utils.SearchableSpinner
                            android:id="@+id/sp_Department"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"/>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:text="@string/add_admin"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:textColor="#000"
                        app:icon="@drawable/ic_person"/>

                <org.icspl.icsconnect.utils.SearchableSpinner
                        android:id="@+id/sp_add_admin"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"/>


            </androidx.appcompat.widget.LinearLayoutCompat>


            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/viewgrp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </com.google.android.material.chip.ChipGroup>
            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:text="@string/add_members"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:textColor="#000"
                        app:icon="@drawable/ic_person_add"/>

                <org.icspl.icsconnect.utils.SearchableSpinner
                        android:id="@+id/sp_add_members"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/viewgrp_member"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </com.google.android.material.chip.ChipGroup>
            <Button
                    android:id="@+id/btn_create_grp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:text="@string/create_groups"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    app:icon="@android:drawable/ic_input_add"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>